switched to new naming concept
git-svn-id: https://korpling.german.hu-berlin.de/svn/saltnpepper/PepperModules/RelANNISModules/trunk@2034 47085195-c50e-4317-8f43-7cb808db0f00